--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,22 +12,28 @@
   "dependencies": {
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.13.2",
+    "dom-to-image-more": "^3.7.2",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
+    "html-to-image": "^1.11.13",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.555.0",
     "prop-types": "^15.8.1",
-    "react": "^19.1.1",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-countup": "^6.5.3",
-    "react-dom": "^19.1.1",
+    "react-dom": "^18.3.1",
     "react-easy-crop": "^5.5.6",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.0",
     "react-router-dom": "^7.8.0",
     "react-toastify": "^11.0.5",
-    "recharts": "^3.5.0",
-    "sweetalert2": "^11.26.3"
+    "recharts": "^3.7.0",
+    "sweetalert2": "^11.26.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
